--- a/EstilosCSS/Registro_Usuarios.css
+++ b/EstilosCSS/Registro_Usuarios.css
@@ -129,7 +129,7 @@ body {
   display: none;
 }
 
-.checkbox_label {
+/* .checkbox_label {
   width: 24px;
   height: 24px;
   border-radius: 5px;
@@ -138,7 +138,7 @@ body {
   display: inline-block;
   position: relative;
   transition: border-color 0.3s, background-color 0.3s;
-}
+} */
 
 .terminosycondiciones_checkbox:checked + .checkbox_label {
   background-color: #afde7f; /* Color de fondo al seleccionar */
